--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   equatable: 2.0.5
   font_awesome_flutter:
+  animated_notch_bottom_bar: ^1.0.0
 
   network_image: ^0.1.1
 
